updated footer to show frameworks and tools used in project at this time add connected user count to online module correct bug where user would be stuck in game room after opp left

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,7 +31,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  padding: 5px;
+  /* flex-grow: .1; */
 }
 
 .title a {
